--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -15,7 +15,7 @@
 {{ else with .Site.Params.description }}
 <meta name="description" content="{{ . }}">
 {{ end }}
-
+<meta name="google-site-verification" content="ZF2mvxh9ykrNGkXQxNkGDq_8M4RIGUHz7QwWEnS-cP0" />
 {{/* Keywords */}}
 {{ with .Params.keywords }}
 <meta name="keywords" content="{{ delimit . ", " }}">
