--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -60,7 +60,7 @@
 {{ end }}
 
 <!-- Icons -->
-<link rel="icon" href="{{ .Site.Params.favicon | default "/favicon.ico" }}">
+<link rel="icon" href="{{ .Site.Params.favicon | default "/img/favicon.ico" }}">
 <link rel="apple-touch-icon" href="{{ .Site.Params.apple_touch_icon }}">
 
 <!-- SEO Discovery -->
